# petminion

./: .gitignore  CNAME  README.md  TODO.md  conf.py  deprecated.md  genindex.html  index.html  index.rst  objects.inv  petminion.code-workspace  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  v3  v4
.github/workflows/: python-app.yml
_sources/: index.rst.txt
dietpi/: config.txt  dietpi.txt
doc/: deprecated.md  development.md  dietpi.md  geeksville-private.md  hardware.md
docs/: conf.py  deprecated.md  development.md  hardware.md  index.rst
experiments/: README.md
experiments/imageai/: .gitignore  test-camera.py  test-classifier.py  test-detection.py
experiments/opencv/: balls.py  fiducial.py  test-camera.py
experiments/pantone/: pantone.py
mosquitto/: petminion.conf
mosquitto/docker-version/: compose.yaml
mosquitto/docker-version/config/: mosquitto.conf
petminion/: BallRecognizer.py  CV2Camera.py  Camera.py  ColorCorrector.py  Feeder.py  ImageRecognizer.py  MVTest.py  MastodonClient.py  PiCamera.py  ProcessedImage.py  PushoverClient.py  RateLimit.py  Recognizer.py  RedditClient.py  SocialMediaClient.py  Trainer.py  TrainingRule.py  VideoWriter.py  __init__.py  __main__.py  rate_limit.py  util.py
petminion/resources/simcamera/: README.md
reddit/: praw.ini
service/: petminion.service
test/image/: README.md
tests/: conftest.py  test_app.py  test_rate_limit.py
tests/unit/: test_ball_recognizer.py  test_color_corrector.py  test_image_recognizer.py  test_pushover.py  test_rate_limit.py  test_simple_feeder_rule.py  test_stub.py  test_video_writer.py
trainer/: __init__.py  __main__.py
udev/: 10-petcam.rules
zigbee2mqtt/: compose.yaml  uartLog.py  zigbee2mqtt.service
zigbee2mqtt/data/: configuration.yaml  coordinator_backup.json  database.db  state.json
